[package]
name = "postdu2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true
debug-assertions = false
# lto does help but not by much with pcre2
lto = true
codegen-units=1
opt-level = 3
trustflags = ["-C", "target-cpu=native"]

[dependencies]
csv = "1.1.6"
structopt = {version = "0.3.1", feature=["color","termsize","wrap_help"]}
anyhow = "~1"
url = "~2"
humantime="2.1.0"
crossbeam-channel = "0.5.2"
flate2 = "1.0.14"
zstd = "0.10.0+zstd.1.5.22"